--- a/SharpFont/SharpFont.NETCore.csproj
+++ b/SharpFont/SharpFont.NETCore.csproj
@@ -1,35 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.props))\dir.props" />
   <PropertyGroup>
-    <OutputType>Library</OutputType>
-    <RootNamespace>SharpFont</RootNamespace>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <AssemblyName>SharpFont</AssemblyName>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DisableImplicitFrameworkReferences>true</DisableImplicitFrameworkReferences>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <DefineConstants>$(DefineConstants);NETCORE</DefineConstants>
-    <NuGetTargetMoniker>.NETStandard,Version=v1.3</NuGetTargetMoniker>
-    <ProjectGuid>{BB53DFB7-DE33-4157-8E09-FE3E9D045369}</ProjectGuid>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' " />
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' " />
   <ItemGroup>
-    <Compile Include="Internal\BinPacker.cs" />
-    <Compile Include="Internal\SbitTable.cs" />
-    <Compile Include="Internal\CharacterMap.cs" />
-    <Compile Include="Internal\DataReader.cs" />
-    <Compile Include="FontCollection.cs" />
-    <Compile Include="Internal\Interpreter.cs" />
-    <Compile Include="InvalidFontException.cs" />
-    <Compile Include="FontFace.cs" />
-    <Compile Include="Internal\Geometry.cs" />
-    <Compile Include="Internal\KerningTable.cs" />
-    <Compile Include="TextAnalyzer.cs" />
-    <Compile Include="Metrics.cs" />
-    <Compile Include="Internal\Renderer.cs" />
-    <Compile Include="Internal\SfntTables.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextFormat.cs" />
-    <Compile Include="TextLayout.cs" />
+    <PackageReference Include="System.Collections" Version="4.3.0" />
+    <PackageReference Include="System.IO.FileSystem" Version="4.3.0" />
+    <PackageReference Include="System.Linq" Version="4.3.0" />
+    <PackageReference Include="System.Drawing.Primitives" Version="4.3.0" />
+    <PackageReference Include="System.Numerics.Vectors" Version="4.3.0" />
+    <PackageReference Include="System.Runtime.Extensions" Version="4.3.0" />
+    <PackageReference Include="System.Runtime.InteropServices" Version="4.3.0" />
+    <PackageReference Include="System.Threading" Version="4.3.0" />
   </ItemGroup>
-  <Import Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory), dir.targets))\dir.targets" />
 </Project>
